[package]
name = "mmd-wasm-runtime"
version = "0.36.0"
edition = "2021"
description = "Optimized WASM runtime for babylon.js MMD"
repository = "https://github.com/noname0310/babylon-mmd"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "parallel", "physics"]
parallel = ["rayon", "wasm-bindgen-rayon"]
physics = []

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = { version = "0.1.7", optional = true }
byte-slice-cast = "1.2.2"
num-traits = "0.2.19"
glam = { version = "0.29.0", features = ["debug-glam-assert", "fast-math"] }
rayon = { version = "1.10.0", optional = true }
wasm-bindgen-rayon = { version = "1.2.1", optional = true }
thread-id = "4.2.2"
wasm_sync = "0.1.2"
rustc-hash = "2.0.0"

[dependencies.web-sys]
version = "0.3.70"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[build-dependencies]
cc = "1.1.21"
